--- a/app/src/main/res/layout/activity_menu_2125_ts.xml
+++ b/app/src/main/res/layout/activity_menu_2125_ts.xml
@@ -65,16 +65,17 @@
                     <TableLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp">
+                        android:padding="5dp"
+                        android:background="#41c5d4">
 
                         <TableRow
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="#41c5d4">
+                            >
 
                             <TextView
                                 android:id="@+id/textView4"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
                                 android:layout_alignParentTop="true"
@@ -82,19 +83,12 @@
 
                             <TextView
                                 android:id="@+id/textView5"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignBaseline="@+id/textView4"
                                 android:layout_alignBottom="@+id/textView4"
                                 android:text="Menu  " />
-
-                            <TextView
-                                android:id="@+id/textView6"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignBaseline="@+id/textView5"
-                                android:layout_alignBottom="@+id/textView5"
-                                android:text="Kelembapan  " />
+                            
 
                             <TextView
                                 android:id="@+id/textView7"
@@ -106,23 +100,23 @@
 
                             <TextView
                                 android:id="@+id/textView8"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignTop="@+id/textView6"
                                 android:layout_alignParentEnd="true"
-                                android:text="Ukuran Rumah Tangga  " />
+                                android:text="Ukuran Rumah Tangga" />
 
                             <TextView
                                 android:id="@+id/textView9"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignTop="@+id/textView6"
                                 android:layout_alignParentEnd="true"
-                                android:text="Berat  " />
+                                android:text="Berat" />
 
                             <TextView
                                 android:id="@+id/textView10"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignTop="@+id/textView6"
                                 android:layout_alignParentEnd="true"
@@ -130,7 +124,7 @@
 
                             <TextView
                                 android:id="@+id/textView11"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignTop="@+id/textView6"
                                 android:layout_alignParentEnd="true"
@@ -138,7 +132,7 @@
 
                             <TextView
                                 android:id="@+id/textView12"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignTop="@+id/textView6"
                                 android:layout_alignParentEnd="true"
@@ -146,7 +140,7 @@
 
                             <TextView
                                 android:id="@+id/textView13"
-                                android:layout_width="wrap_content"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:layout_alignTop="@+id/textView6"
                                 android:layout_alignParentEnd="true"
@@ -159,7 +153,6 @@
                         android:id="@+id/RecyclerView_Sensor_dht"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
