--- a/app/src/main/res/drawable/cell_shape.xml
+++ b/app/src/main/res/drawable/cell_shape.xml
@@ -2,22 +2,22 @@
 <layer-list  xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#6ac763"/>
-            <corners android:radius="1dp"/>
+            <solid android:color="#63c7bb"/>
+            <corners android:radius="15dp"/>
 
         </shape>
     </item>
 
     <item
         android:left="1dp"
-        android:right="2dp"
+        android:right="1dp"
         android:top="1dp"
-        android:bottom="2dp">
+        android:bottom="1dp">
         <shape android:shape="rectangle">
             <solid android:color="#fdfdfd"/>
             <size android:width="50dp"
                 android:height="50dp"/>
-            <corners android:radius="1dp"/>
+            <corners android:radius="15dp"/>
         </shape>
 
 
