--- a/app/src/main/res/layout/activity_menu_2125_ts.xml
+++ b/app/src/main/res/layout/activity_menu_2125_ts.xml
@@ -10,32 +10,13 @@
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
-                android:entries="@array/pilih_menu"
                 android:spinnerMode="dropdown" />
 
-    <!--<ScrollView-->
-        <!--android:layout_below="@id/spinner"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--<HorizontalScrollView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content">-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/ll_linear"-->
-        <!--android:background="#FFFFFF"-->
-        <!--android:orientation="vertical"-->
-        <!--android:padding="5dp">-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical">-->
-
     <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -43,10 +24,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -88,7 +65,7 @@
                                 android:layout_alignBaseline="@+id/textView4"
                                 android:layout_alignBottom="@+id/textView4"
                                 android:text="Menu  " />
-                            
+
 
                             <TextView
                                 android:id="@+id/textView7"
@@ -156,9 +133,121 @@
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
-            </HorizontalScrollView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical" >
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#4174d4"
+                        android:gravity="center"
+                        android:text="Menu Makan Selingan"
+                        android:textColor="@android:color/white"
+                        android:textSize="17dp" />
+
+                    <TableLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:background="#41c5d4">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            >
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
+                                android:text="Waktu  " />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBaseline="@+id/textView4"
+                                android:layout_alignBottom="@+id/textView4"
+                                android:text="Menu  " />
+
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Bahan Makanan  " />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Ukuran Rumah Tangga" />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Berat" />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Energi  " />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Protein  " />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Lemak  " />
+
+                            <TextView
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignTop="@+id/textView6"
+                                android:layout_alignParentEnd="true"
+                                android:text="Karbohidrat" />
+                        </TableRow>
+
+                    </TableLayout>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/RecyclerView_Sensor_dht2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                    </android.support.v7.widget.RecyclerView>
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
 
         </LinearLayout>
+
+
+    </HorizontalScrollView>
     </ScrollView>
 
     <!--</LinearLayout>-->
