--- a/app/src/main/res/layout/activity_menu2_2125_ts.xml
+++ b/app/src/main/res/layout/activity_menu2_2125_ts.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinner2"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:spinnerMode="dropdown"
